# fhe-experiments

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  flake.nix  logReg.py  pyproject.toml  sdgClassifier_encrypted-training.py  sgdClassifier_encrypted-training.py  shell.nix
src/concrete_ml_playground/: __init__.py  __main__.py  csv_handler.py  dataset_collector.py  draw_plots.py  experiment_collector.py  interfaces.py  logReg.py  sgdClassifier_encrypted_training.py  statistics_handler.py  write_csv.py
src/concrete_ml_playground/datasets/: breast_cancer.py  clean_conll.py  digits.py  iris.py  sms_spam.py  synthetic.py  xor.py
src/concrete_ml_playground/experiments/: NER.py  NER_PTQ.py  NER_QAT.py  NER_base.py  NER_nearest_neighbors.py  logReg.py  neuralNet.py  sgdClassifier_encrypted_training.py  xgbClassifier.py
tex/: acronyms.tex  references.bib
tex/figures/: fhe_sequence_diagram.mermaid  tfhe_building_blocks.txt
tex/thesis/: abstract.tex  acronyms.tex  appendix.tex  background.tex  bsc-thesis.tex  conclusion.tex  conclusion_and_outlook.tex  discussion.tex  introduction.tex  method.tex  results.tex  zusammenfassung.tex
thesis/: background.tex  bsc-thesis.tex  evaluation.tex  goals_and_setup.tex  introduction.tex  method.tex  references.bib  zusammenfassung.tex
thesis/figures/: decision_tree.txt  fhe_timeline.txt  lwe_message_encoding.odg
