[project]
name = "concrete-ml-playground"
version = "0.1.0"
description = ""
authors = [
    {name = "JulianFP",email = "julian@partanengroup.de"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "concrete-ml (>=1.9.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "concrete_ml_playground", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
