[build-system]
requires = [
    "setuptools>=80",
]
build-backend = "setuptools.build_meta"

[project]
name = "concrete_ml_playground"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "JulianFP",email = "julian@partanengroup.de"}
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "click>=8.2.1",
    "concrete-ml>=1.9.0",
    "datasets>=4.0.0",
    "matplotlib>=3.10.6",
    "pydantic>=2.11.7",
    "pytest>=8.4.2",
]

[project.scripts]
concrete_ml_playground = "concrete_ml_playground.__main__:main"

[tool.uv]
package = true

[tool.uv.sources]
concrete-ml = { git = "https://github.com/zama-ai/concrete-ml", branch = "main" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["concrete_ml_playground*"]

[tool.ruff]
line-length = 100
